fix horiz overflow

--- a/frontend/styles/base/layout.css
+++ b/frontend/styles/base/layout.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 main {
